--- a/employees-api/employees-front-end/css/add-form.css
+++ b/employees-api/employees-front-end/css/add-form.css
@@ -1,3 +1,13 @@
 #field {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+#field input,
+#field select {
+  width: 100%;
+}
+
+#submit input {
+  width: 100%;
+  margin-top: 20px;
 }
